--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,4 +1,15 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-size: .8rem;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
