--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -6,7 +6,7 @@
 
 body {
     font-size: .8rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .container {
